CB-190 Convert AppleStrategy to null
